git-svn-id: http://svn.vdombox.ru/flextools/trunk@6364 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Events.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Events.mxml
@@ -23,8 +23,8 @@
 //				arLibraries.removeAll();
 //				libCode.text = "";
 				
-				_data =  net.vdombox.object_editor.view.essence.Events.Userinterfaceevents[0];
-				if (!_data) _data = new XML("<Userinterfaceevents/>");
+//				_data =  net.vdombox.object_editor.view.essence.Events.Userinterfaceevents[0];
+//				if (!_data) _data = new XML("<Userinterfaceevents/>");
 				
 				for each(var child:XML in _data.children())
 				{
