--- a/TypeEditor/v.02/src/ObjectEditor2.mxml
+++ b/TypeEditor/v.02/src/ObjectEditor2.mxml
@@ -2,8 +2,8 @@
 <s:WindowedApplication xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					   xmlns:s="library://ns.adobe.com/flex/spark" 
 					   xmlns:mx="library://ns.adobe.com/flex/mx"
-					   xmlns:ns="net.vdombox.help_editor.view.essence.*"
-					   xmlns:vs="net.vdombox.help_editor.view.*">
+					   xmlns:ns="net.vdombox.object_editor.view.essence.*"
+					   xmlns:vs="net.vdombox.object_editor.view.*">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects)  -->
 	</fx:Declarations>
