--- a/TypeEditor/v.02/src/ObjectEditor2.mxml
+++ b/TypeEditor/v.02/src/ObjectEditor2.mxml
@@ -4,12 +4,13 @@
 					   xmlns:mx="library://ns.adobe.com/flex/mx"
 					   xmlns:ns="net.vdombox.object_editor.view.essence.*"
 					   xmlns:vs="net.vdombox.object_editor.view.*" 
-					   minWidth="900" minHeight="600">
+					   minWidth="900" minHeight="600"
+					   >
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects)  -->
 	</fx:Declarations>
 	<s:HGroup width="100%" height="100%" >
-		<mx:VBox width="100%" height="100%" >
+		<mx:VBox  height="100%" >
 			<s:Button label="Open"/>
 		<mx:Accordion width="150" height="100%" >
 			<s:NavigatorContent label="Accordion Button for Panel 1">
@@ -38,9 +39,7 @@
 			
 			<s:NavigatorContent label="Button2">
 				<vs:ObjectView/>
-			</s:NavigatorContent>
-			
-			
+			</s:NavigatorContent>			
 			
 			<s:NavigatorContent label="Copy">
 				<vs:ObjectView/>
