--- a/TypeEditor/v.02/src/ObjectEditor2.mxml
+++ b/TypeEditor/v.02/src/ObjectEditor2.mxml
@@ -4,46 +4,38 @@
 					   xmlns:mx="library://ns.adobe.com/flex/mx"
 					   xmlns:ns="net.vdombox.object_editor.view.essence.*"
 					   xmlns:vs="net.vdombox.object_editor.view.*" 
-					   minWidth="900" minHeight="600"
-					   >
+					   minWidth="900" minHeight="600" xmlns:local="*"
+					   creationComplete="facade.startup(this)">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects)  -->
 	</fx:Declarations>
+	
+<fx:Script>
+	<![CDATA[	
+		import net.vdombox.object_editor.view.Mediators.OpenMediator;
+		
+		import org.puremvc.as3.patterns.facade.Facade;
+		
+		
+		private var facade:ApplicationFacade = ApplicationFacade.getInstance();
+		
+		
+		
+	]]>
+</fx:Script>
+	
 	<s:HGroup width="100%" height="100%" >
 		<mx:VBox  height="100%" >
-			<s:Button label="Open"/>
-		<mx:Accordion width="150" height="100%" >
-			<s:NavigatorContent label="Accordion Button for Panel 1">
-				<mx:Label id="labll" text="Accordion container panel 1"/>
-				
-			</s:NavigatorContent>
-			
-			<s:NavigatorContent label="Accordion Button for Panel 2">
-				<mx:Label text="Accordion container panel 2"/>
-			</s:NavigatorContent>
-		</mx:Accordion>
+			<s:Button id="openButton" label="Open" />
+			<vs:ObjectsAccordion id="objAccordion" width="150"/>		
 		</mx:VBox>
-		<mx:TabNavigator  width="100%" height="100%">
+		
+		<mx:TabNavigator id="tabNavigator" width="100%" height="100%">
 			
 			<s:NavigatorContent label="HTMLContainer">
 				<vs:ObjectView/>
 			</s:NavigatorContent>	
-			
-			<s:NavigatorContent label="Form">
-				<vs:ObjectView/>
-			</s:NavigatorContent>	
-			
-			<s:NavigatorContent label="Button">
-				<vs:ObjectView/>
-			</s:NavigatorContent>
-			
-			<s:NavigatorContent label="Button2">
-				<vs:ObjectView/>
-			</s:NavigatorContent>			
-			
-			<s:NavigatorContent label="Copy">
-				<vs:ObjectView/>
-			</s:NavigatorContent>	
+				
 		</mx:TabNavigator>
 	</s:HGroup>
 </s:WindowedApplication>
