--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectsAccordion.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectsAccordion.mxml
@@ -2,7 +2,10 @@
 
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%"	
+		 xmlns:vs="net.vdombox.object_editor.model.*"
+		 >
+		 
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -14,13 +17,25 @@
 			public function choseObject():void
 			{			
 				dispatchEvent( new Event( CHOSE_OBJECT ) );
-			}		
+			}
+			
+			public function  addObject(object:DisplayObject):void
+			{
+				accordion.addChild(object);
+				accordion.validateNow();				
+			}	
+			
+			public function   getObjectdByName(name:String ):DisplayObject
+			{
+				return accordion.getChildByName(name);
+			}
+			
+			public function removeAllObjects():void
+			{
+				accordion.removeAllChildren();				
+			}
 		]]>
 	</fx:Script>
-	
-	<s:layout>
-		<s:HorizontalLayout verticalAlign="top" horizontalAlign="left" />
-	</s:layout>
 	
 	<s:Panel title="Accordion Container" width="100%" height="100%"
 			 color="0x000000" 
@@ -29,11 +44,7 @@
 			<s:VerticalLayout paddingLeft="2" paddingRight="2" paddingTop="2" paddingBottom="2"/>
 		</s:layout>
 		
-		<mx:Accordion id="accordion" color="0x323232" width="100%" height="100%">
-			<s:NavigatorContent label="Standart" doubleClick="choseObject()">
-				<mx:Label text="11111" visible="false"/>
-			</s:NavigatorContent>			
-		</mx:Accordion>				
+		<mx:Accordion id="accordion" color="0x323232" width="100%" height="100%" doubleClickEnabled="true"/>						
 	</s:Panel>	
 </s:Group>
 
