--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Atributes.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Atributes.mxml
@@ -1,9 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" xmlns:ns="net.vdombox.object_editor.model.*">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	<s:Label text="Atributes"/>
+	<fx:Script>
+		<![CDATA[
+			import mx.collections.ArrayCollection;
+			
+			[Bindable]
+			public var arInterfaceType:ArrayCollection = new ArrayCollection(
+				[ 	{label:"Standard", data:1}, 
+					{label:"RichText Editor", data:2}, 
+					{label:"Text Editor", data:3}, 
+					{label:"Picture", data:4}, 
+					{label:"Special Table", data:5}]);
+			
+		]]>
+	</fx:Script>
+	<s:HGroup>
+		<s:VGroup>
+			<s:List width="100%"/>
+			<s:HGroup>
+				<s:Button label="Add"/>
+				<s:Button label="Delete"/>
+			</s:HGroup>
+		</s:VGroup>
+		<mx:Form width="100%" color="0x323232" paddingTop="0">
+			<mx:FormHeading fontSize="10"  label="Enter values into the form." paddingTop="0" />
+			
+			<mx:FormItem label="Name" toolTip="Имя объекта">
+				<mx:TextInput id="fname" width="250" change="{}"/>
+			</mx:FormItem>
+			
+			<mx:FormItem label="DisplayName" >
+				<s:HGroup>
+					<ns:OETextInput id="fDisplayName" width="213" editable="false"/>
+					<s:Button label="..." width="30" click="{}"/>
+				</s:HGroup>
+			</mx:FormItem>
+			
+			<mx:FormItem label="Name" toolTip="Имя объекта">
+				<mx:TextInput id="defaultValue" width="250" change="{}"/>
+			</mx:FormItem>
+			
+			<mx:FormItem label="RegExp" >
+				<s:HGroup>
+					<ns:OETextInput id="regExp" width="213" editable="false"/>
+					<s:Button label="..." width="30" click="{}"/>
+				</s:HGroup>
+			</mx:FormItem>
+			<mx:FormItem label="Visible" >
+				<s:CheckBox id="visibleAtr" label="Visible atribute"  toolTip="Отображаемый в редакторе" change="{}"/>
+			</mx:FormItem>
+			
+			<mx:FormItem label="Help" >
+				<s:HGroup>
+					<ns:OETextInput id="helpAtr" width="213" editable="false"/>
+					<s:Button label="..." width="30" click="{}"/>
+				</s:HGroup>
+			</mx:FormItem>
+			<mx:FormItem label="InterfaceType" >
+				<s:HGroup>
+					<ns:OETextInput id="interfaceType" width="213" editable="false"/>
+					<s:Button label="..." width="30" click="{}"/>
+				</s:HGroup>
+			</mx:FormItem>
+			
+			<mx:FormItem label="CodeInterface" >
+				<s:HGroup>
+					<ns:OETextInput id="codeInterface" width="213" editable="false"/>
+					<s:Button label="..." width="30" click="{}"/>
+				</s:HGroup>
+			</mx:FormItem>
+			<mx:FormItem label="Colorgroup" >
+				<s:HGroup>
+					<ns:OETextInput id="colorgroup" width="213" editable="false"/>
+					<s:Button label="..." width="30" click="{}"/>
+				</s:HGroup>
+			</mx:FormItem>
+		</mx:Form>		
+	</s:HGroup>
+	
 </s:Group>
