--- a/TypeEditor/v.02/src/ObjectEditor2.mxml
+++ b/TypeEditor/v.02/src/ObjectEditor2.mxml
@@ -19,10 +19,11 @@
 	]]>
 </fx:Script>
 	
-	<s:HGroup width="100%" height="100%" >
-		<mx:VBox  height="100%" >
+	
+		<mx:HDividedBox width="100%" height="100%">
+		<mx:VBox  height="100%" width="150" >
 			<s:Button id="openButton" label="Open" />
-			<vs:ObjectsAccordion id="objAccordion" width="150"/>		
+			<vs:ObjectsAccordion id="objAccordion" width="100%"/>		
 		</mx:VBox>
 		
 		<mx:TabNavigator id="tabNavigator" width="100%" height="100%">
@@ -32,5 +33,5 @@
 			</s:NavigatorContent>	
 				
 		</mx:TabNavigator>
-	</s:HGroup>
+			</mx:HDividedBox> 
 </s:WindowedApplication>
