--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/AccordionNavigatorContent.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/AccordionNavigatorContent.mxml
@@ -14,9 +14,14 @@
 			{
 				arrColl.addItem(obj);
 			}
+			
+			public function get selectedObject():Object
+			{
+				return arrColl[list.selectedIndex];
+			}
 		]]>
 	</fx:Script>	
-	<s:List  width="100%" height="100%"
+	<s:List id="list" width="100%" height="100%"
 		     itemRenderer="net.vdombox.object_editor.view.ListItemRenderer"	
 		   	 dataProvider="{arrColl}"  />
 </s:NavigatorContent>
