--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
@@ -1,34 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:TabNavigator xmlns:fx="http://ns.adobe.com/mxml/2009" 
-				 xmlns:s="library://ns.adobe.com/flex/spark" 
-				 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" xmlns:ns="net.vdombox.object_editor.view.essence.*">
+<s:NavigatorContent 
+					xmlns:fx="http://ns.adobe.com/mxml/2009" 
+					xmlns:s="library://ns.adobe.com/flex/spark" 
+					xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" xmlns:ns="net.vdombox.object_editor.view.essence.*">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	<s:NavigatorContent label="Information">
-		<ns:Information/>	</s:NavigatorContent>
-	
-	<s:NavigatorContent label="Atributes">
-		<ns:Atributes/>	</s:NavigatorContent>
-	
-	<s:NavigatorContent label="Languages">
-		<ns:Languages/> </s:NavigatorContent>
-	
-	<s:NavigatorContent label="Libraries">
-		<ns:Libraries/> 	</s:NavigatorContent>
-	
-	
-	<s:NavigatorContent label="Resourses">
-		<ns:Resourses/> 	</s:NavigatorContent>
-	
-	
-	<s:NavigatorContent label="SourceCode">
-		<ns:SourceCode/> 	</s:NavigatorContent>
-	
-	<s:NavigatorContent label="Actions">
-		<ns:Actions/> 	</s:NavigatorContent>
-	
-	<s:NavigatorContent label="Events">
-		<ns:Events/> 	</s:NavigatorContent>
-	
-</mx:TabNavigator>
+	<mx:TabNavigator >
+		
+		<s:NavigatorContent label="Information">
+			<ns:Information id="information"/>	</s:NavigatorContent>
+		
+		<s:NavigatorContent label="Atributes">
+			<ns:Atributes/>	</s:NavigatorContent>
+		
+		<s:NavigatorContent label="Languages">
+			<ns:Languages/> </s:NavigatorContent>
+		
+		<s:NavigatorContent label="Libraries">
+			<ns:Libraries/> 	</s:NavigatorContent>
+		
+		
+		<s:NavigatorContent label="Resourses">
+			<ns:Resourses/> 	</s:NavigatorContent>
+		
+		
+		<s:NavigatorContent label="SourceCode">
+			<ns:SourceCode/> 	</s:NavigatorContent>
+		
+		<s:NavigatorContent label="Actions">
+			<ns:Actions/> 	</s:NavigatorContent>
+		
+		<s:NavigatorContent label="Events">
+			<ns:Events/> 	</s:NavigatorContent>
+		
+	</mx:TabNavigator>
+</s:NavigatorContent>
