--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:NavigatorContent 
+<mx:VBox
 					xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					xmlns:s="library://ns.adobe.com/flex/spark" 
 					xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" xmlns:ns="net.vdombox.object_editor.view.essence.*">
@@ -62,4 +62,4 @@
 			<ns:Events/> 	</s:NavigatorContent>
 		
 	</mx:TabNavigator-->
-</s:NavigatorContent>
+</mx:VBox>
