--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
@@ -3,7 +3,8 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
 		 xmlns:OEComponents="OEComponents.*"
-		 show="group1_showHandler(event)" xmlns:ns="net.vdombox.object_editor.model.*">
+		 show="group1_showHandler(event)" xmlns:ns="net.vdombox.object_editor.model.*"
+		 label="Information">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 		<s:RadioButtonGroup id="group1"/>
