--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/SourceCode.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/SourceCode.mxml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-	
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" xmlns:s="library://ns.adobe.com/flex/spark" >
+<s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
+					xmlns:s="library://ns.adobe.com/flex/spark" 
+					xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
+					xmlns:OEComponents="OEComponents.*"
+					xmlns:ns="net.vdombox.object_editor.model.*"
+					label="SourceCode"
+					>
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -32,4 +36,4 @@
 	</fx:Script>
 	
 	<s:TextArea  id="sourceCode"  text="123" width="100%" height="100%" change="{saveChange()}"/>
-</s:Group>
+</s:NavigatorContent>
