git-svn-id: http://svn.vdombox.ru/flextools/trunk@6416 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
@@ -21,6 +21,7 @@
 			import net.vdombox.object_editor.model.Language;
 			import net.vdombox.object_editor.view.popups.ChangeWord;
 			
+			public static const NAME:String = "InformationMediator";
 			
 			private var language:Language = Language.getInstance();
 			
@@ -150,6 +151,7 @@
 			
 			private function saveChanges():void
 			{
+				dispatchEvent(new Event( Event.CHANGE ));
 //				_data.Name = fname.text;
 //				_data.DisplayName = fDisplayName.text;	
 //				_data.XMLScriptName = fXMLScriptName.text;	
