git-svn-id: http://svn.vdombox.ru/flextools/trunk@6417 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
@@ -52,8 +52,10 @@
 							
 			public function set  dataProvader(xml:XML):void
 			{
+				return;
 				this.enabled = true;
 				
+				/*
 				_data =  xml.descendants("Information")[0];
 				if (!_data) _data = new XML("<Information/>");
 				
@@ -137,6 +139,7 @@
 					fContainer.selectedIndex = 0;
 				else
 					fContainer.selectedIndex = int(_data.Container.toString())-1
+				*/
 			}
 			
 			private function validateValue(value:String):void
