git-svn-id: http://svn.vdombox.ru/flextools/trunk@6419 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
@@ -21,7 +21,7 @@
 			import net.vdombox.object_editor.model.Language;
 			import net.vdombox.object_editor.view.popups.ChangeWord;
 			
-			public static const NAME:String = "InformationMediator";
+			public static const INFORMATION_CHANGE:String = "InformationChange";
 			
 			private var language:Language = Language.getInstance();
 			
