--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
@@ -35,7 +35,7 @@
 				_tabNavigator = new TabNavigator();
 				_tabNavigator.percentHeight = 100;
 				_tabNavigator.percentWidth = 100;
-				addElement(_tabNavigator)
+				addElementAt(_tabNavigator, 0)
 			}
 		]]>
 	</fx:Script>
