add last path during opening directory
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6428 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
@@ -69,6 +69,10 @@
 			<ns:Events/> 	</s:NavigatorContent>
 		
 	</mx:TabNavigator-->
-	<s:Button label="Save" id="saveObjectTypeButton" />
+	<s:HGroup>
+		<s:Button label="Save" 	  id="saveObjectTypeButton" />
+		<s:Button label="Save as" id="saveAsObjectTypeButton" />
+	</s:HGroup>
+	
 		
 </mx:VBox>
