--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Languages.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Languages.mxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" click="save()">
+<s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
+		 			xmlns:s="library://ns.adobe.com/flex/spark" 
+					xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
+					click="save()"
+					label="Languages">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -83,7 +85,7 @@
 			
 			private function save():void
 			{
-				if (dataChanged)
+/*				if (dataChanged)
 				{	
 					dataChanged = false;
 					
@@ -113,7 +115,7 @@
 					
 					delete prentXML.Languages[0] ;
 					prentXML.appendChild(newLangs);
-				}
+				}*/
 			}
 			
 			private function addWord():void
@@ -157,9 +159,6 @@
 					}
 				}
 			}
-			
-			
-
 		]]>
 	</fx:Script>
 	<s:VGroup width="100%" height="100%">
@@ -176,4 +175,4 @@
 				  click="{deleteWord()}"/>
 	</s:HGroup>
 	</s:VGroup>
-</s:Group>
+</s:NavigatorContent>
