--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Events.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Events.mxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
+<s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" xmlns:OEComponents="OEComponents.*" xmlns:ns="net.vdombox.object_editor.model.*">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
+		 xmlns:OEComponents="OEComponents.*" xmlns:ns="net.vdombox.object_editor.model.*"
+		 label="Events">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -36,21 +38,16 @@
 			}
 			
 			private function changeEvent():void
-			{
-				arParameters.removeAll();
-				
-				
+			{/*
+				arParameters.removeAll();				
 				var eventXML:XML = getCurentEvent();
-
-				tiEventName.text = eventXML.@Name;
-				
+				tiEventName.text = eventXML.@Name;				
 				for each(var child:XML in eventXML.Parameters.children())
 				{
 					arParameters.addItem({label:child.@Name, data:child.@Name});
-				}
-				
+				}				
 				parameters.selectedIndex = 0;
-				changeParameter();
+				changeParameter();*/
 			}
 			
 			private function addEvent():void
@@ -211,8 +208,6 @@
 			{
 				
 			}
-			
-			
 		]]>
 	</fx:Script>
 	
@@ -268,4 +263,4 @@
 		
 	</mx:Form>
 	</s:HGroup>
-</s:Group>
+</s:NavigatorContent>
