--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Libraries.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Libraries.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
+<s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%"
+		 label="Libraries">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -86,9 +87,6 @@
 					saveChange();
 				}
 			}
-				
-			
-			
 		]]>
 	</fx:Script>
 	
@@ -109,5 +107,4 @@
 			<mx:TextArea  id="libCode"  width="100%" height="100%" change="{saveChange()}"/>
 		</s:VGroup>	
 	</s:HGroup>
-	
-</s:Group>
+</s:NavigatorContent>
