--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Resourses.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Resourses.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" click="save()">
+<s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
+		 			xmlns:s="library://ns.adobe.com/flex/spark" 
+		 			xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" click="save()"
+					label="Resourses">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -200,4 +201,4 @@
 					  click="{deleteResource()}"/>
 		</s:HGroup>
 	</s:VGroup>
-</s:Group>
+</s:NavigatorContent>
