--- a/TypeEditor/v.02/src/ObjectEditor2.mxml
+++ b/TypeEditor/v.02/src/ObjectEditor2.mxml
@@ -21,12 +21,20 @@
 		import org.puremvc.as3.patterns.facade.Facade;
 				
 		private var facade:ApplicationFacade = ApplicationFacade.getInstance();			
+
+		protected function openButton_clickHandler(event:MouseEvent):void
+		{
+			// TODO Auto-generated method stub
+			
+		}
+
 	]]>
 </fx:Script>
 	
 	<mx:HDividedBox width="100%" height="100%">
 		<mx:VBox  height="100%" width="150" >
 			<s:Button id="openButton" label="Open" />
+			
 			<vs:ObjectsAccordion id="objAccordion" width="100%"/>		
 		</mx:VBox>
 		
