git-svn-id: http://svn.vdombox.ru/flextools/trunk@6445 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
@@ -41,13 +41,19 @@
 				</s:HGroup>
 			</mx:FormItem>
 			
-			<mx:FormItem label="Name" toolTip="Имя объекта">
+			<mx:FormItem label="DefaultValue" toolTip="Имя объекта">
 				<mx:TextInput id="defaultValue" width="250" change="{}"/>
 			</mx:FormItem>
 			
 			<mx:FormItem label="RegExp" >
 				<s:HGroup>
 					<ns:OETextInput id="regExp" width="213" editable="false"/>
+					<s:Button label="..." width="30" click="{}"/>
+				</s:HGroup>
+			</mx:FormItem>
+			<mx:FormItem label="ErrorValidationMessage" >
+				<s:HGroup>
+					<ns:OETextInput id="fErrMessage" width="213" editable="false"/>
 					<s:Button label="..." width="30" click="{}"/>
 				</s:HGroup>
 			</mx:FormItem>
