git-svn-id: http://svn.vdombox.ru/flextools/trunk@6463 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
@@ -8,9 +8,11 @@
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
+			import mx.collections.ArrayCollection;
 			import mx.containers.TabNavigator;
 			
-			import spark.components.Button;
+			import spark.components.Button;		
+			
 			private var _tabNavigator:TabNavigator;
 			private var _saveButton:Button;
 			
@@ -71,8 +73,6 @@
 	</mx:TabNavigator-->
 	<s:HGroup>
 		<s:Button label="Save" 	  id="saveObjectTypeButton" />
-		<s:Button label="Save as" id="saveAsObjectTypeButton" />
-	</s:HGroup>
-	
-		
+		<s:Button label="Save as" id="saveAsObjectTypeButton" />		
+	</s:HGroup>	
 </mx:VBox>
