--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
@@ -47,99 +47,11 @@
 				[ 	{label:"Ordinary Object", data:1}, 
 					{label:"Container", data:2}, 
 					{label:"Top-level container", data:3}]);			
-					
-			[Bindable]
-			public var currentLocation:Array = new Array();
-			
+						
 			public function set dataProvader(xml:XML):void
 			{
 				return;
-				this.enabled = true;				
-				/*
-				_data =  xml.descendants("Information")[0];
-				if (!_data) _data = new XML("<Information/>");
-				
-				
-				var item:XML;
-				validateValue("Name");
-				fname.text = _data.Name.toString();	
-				
-				
-				validateValue("DisplayName");
-				fDisplayName.text = _data.DisplayName.toString();	
-				
-				validateValue("XMLScriptName");
-				fXMLScriptName.text = _data.XMLScriptName.toString();	
-				
-				validateValue("RenderType");
-				fRenderType.text = _data.RenderType.toString();
-				
-				validateValue("Description");	
-				fDescription.text = _data.Description.toString();
-				
-				validateValue("ClassName");
-				fClassName.text = _data.ClassName.toString();
-				
-				item = _data.descendants("ID")[0];
-				if (!item)
-				{
-					var _uid: String = UIDUtil.createUID().toLowerCase(); 
-					item = new XML("<ID>" + _uid + "</ID>");
-					_data.appendChild(item);	
-				}	
-				fID.text = _data.ID.toString();
-				
-				validateValue("Category");
-				fCategory.text = _data.Category.toString();
-				
-				validateValue("Containers");
-				fVersion.text = _data.Version.toString();
-				
-				validateValue("OptimizationPriority");
-				fOptimizationPriority.value = int(_data.OptimizationPriority.toString());
-				
-				validateValue("WCAG");
-				fWCAG.text = _data.WCAG.toString();
-				
-				
-//				fContainer.text = _data.Container.toString();
-				
-				validateValue("Containers");
-				fContainers.text = _data.Containers.toString();
-				
-				validateValue("Languages");
-				fLanguages.text = _data.Languages.toString();
-				
-				validateValue("RemoteMethods");
-				fRemoteMethods.text = _data.RemoteMethods.toString();
-				
-				validateValue("Handlers");
-				fHandlers.text = _data.Handlers.toString();
-				
-				validateValue("Moveable");
-				fMoveable.selected = _data.Moveable.toString() == "1";
-				
-				validateValue("Dynamic");
-				fDynamic.selected = _data.Dynamic.toString() == "1";
-				
-				validateValue("InterfaceType");
-				if (_data.InterfaceType.toString() == "")
-					fInterfaceType.selectedIndex = 0;
-				else
-					fInterfaceType.selectedIndex = int(_data.InterfaceType.toString())-1
-						
-				validateValue("Resizable");
-				if (_data.Resizable.toString() == "")
-					fResizable.selectedIndex = 0;
-				else
-					fResizable.selectedIndex = int(_data.Resizable.toString())
-						
-				validateValue("Container");
-				if (_data.InterfaceType.toString() == "")
-					fContainer.selectedIndex = 0;
-				else
-					fContainer.selectedIndex = int(_data.Container.toString())-1
-				*/
+				this.enabled = true;			
 			}
 			
 			private function validateValue(value:String):void
@@ -189,8 +101,8 @@
 				fLanguages.text =  language.languagesList;
 			}
 			
-			private function changeDisplayName ():void
-			{
+			/*private function changeDisplayName ():void
+			{				
 				var popup:ChangeWord = ChangeWord(PopUpManager.createPopUp(this, ChangeWord, true));
 				popup.addEventListener(CloseEvent.CLOSE, closeHandler);
 				
@@ -200,8 +112,8 @@
 					if(wordCode == "")return;					
 					fDisplayName.text = wordCode;					
 				}				
-				saveChanges();
-			}
+				saveChanges();				
+			}*/
 		]]>
 	</fx:Script>
 	
@@ -219,8 +131,9 @@
 			
 		<mx:FormItem label="DisplayName" >
 			<s:HGroup>
-				<ns:OETextInput name="displayName" id="fDisplayName" width="213" editable="false"/>
-				<s:Button label="..." width="30" click="changeDisplayName()"/>
+				<!--ns:OETextInput name="displayName" id="fDisplayName" width="213" editable="false"/-->
+				<s:TextInput id="fDisplayName" width="213" editable="false"/>
+				<s:Button id="fchangeDisplayName" label="..." width="30" />
 			</s:HGroup>
 		</mx:FormItem>
 		
@@ -312,7 +225,7 @@
 				<s:NumericStepper id="fOptimizationPriority" width="55" 
 							value="0" snapInterval="1" minimum="1" maximum="100"  change="{saveChanges()}"/>
 			</mx:FormItem>
-			<mx:ComboBox dataProvider="{currentLocation}" width="150" color="0x000000"/>
+			<mx:ComboBox id="fcurrentLocation" width="150" color="0x000000"/>
 			
 		</mx:Form>
 	</s:HGroup>
