--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Languages.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Languages.mxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 			xmlns:s="library://ns.adobe.com/flex/spark" 
-					xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
-					click="save()"
+					xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%"					
 					label="Languages">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
@@ -17,41 +16,10 @@
 			
 			import net.vdombox.object_editor.view.popups.NewLanguage;
 			
-			private var _data : XML;
 			private var prentXML :XML;
 			
 			[Bindable]
 			public var arLanguages:ArrayCollection = new ArrayCollection();
-			
-			public function set  dataProvader(xml:XML):void
-			{
-				//to mediator
-//				this.enabled = true;
-//				prentXML = xml;
-////				arLanguages = new ArrayCollection();
-//				
-//				var cols:Array = new Array();
-//				var dataGridColumn: DataGridColumn = new DataGridColumn("ID");
-//				dataGridColumn.width = 50;
-////				dataGridColumn.editable = true;
-//				dataGridColumn.setStyle("fontWeight", "bold");
-//				cols.push(dataGridColumn);
-//				
-//				data = xml.Languages[0];
-//				if (!data) data = new XML("<Languages/>");
-//				
-//				for each(var child:XML in data.children())
-//				{	
-//					if (child.name() == "Language")
-//					{
-//						dataGridColumn = new DataGridColumn(child[0].@Code);
-//						cols.push(dataGridColumn);
-//					}
-//				}
-//				languages.columns = cols;
-//				
-//				arLanguages.removeAll();
-			}
 			
 			private var dataChanged:Boolean;
 			protected function languages_itemEditEndHandler(event:DataGridEvent):void
@@ -59,69 +27,33 @@
 				// TODO Auto-generated method stub
 //				languages.validateNow();
 //				save();
-				dataChanged = true;
-				
+				dataChanged = true;				
 			}
 			
-			private function save():void
-			{
-/*				if (dataChanged)
-				{	
-					dataChanged = false;
-					
-					var newLangs:XML = new XML("<Languages/>");
-					for(var i:int=0; i < languages.columns.length; i++)
-					{
-						var dtGridCol:DataGridColumn = languages.columns[i] as DataGridColumn;
-						if (dtGridCol.dataField == "ID") continue;
-						
-						var lanItem:XML = new XML("<Language/>");
-						lanItem.@Code = dtGridCol.dataField;
-						newLangs.appendChild(lanItem);
-					}
-					for (var item:String in arLanguages)
-					{
-						var word:Object = arLanguages[item];
-						var id:String = word["ID"];
-						for each(var lang:XML in newLangs.children())
-						{
-							var sentence: XML = new XML("<Sentence/>");
-							sentence.@ID = id;
-							sentence.appendChild(word[lang.@Code]);
-							
-							lang.appendChild(sentence);
-						}
-					}
-					
-					delete prentXML.Languages[0] ;
-					prentXML.appendChild(newLangs);
-				}*/
-			}
-			
-/*			private function addLaguage():void
-			{
-				var popup:NewLanguage = NewLanguage(PopUpManager.createPopUp(this, NewLanguage, true));
-				popup.addEventListener(CloseEvent.CLOSE, closeHandler);
-				
-				function closeHandler(event:CloseEvent):void
-				{
-					var lan:String = event.target.languageName;
-					
-					if(lan == "")return;
-					
-					var cols:Array = languages.columns;
-					var dataGridColumn: DataGridColumn = new DataGridColumn(lan);
-	
-					cols.push(dataGridColumn);
-					languages.columns = cols;
-					
-					for (var i:String in arLanguages)
-					{
-						var word:Object = arLanguages[i];
-						word[lan] = word["en_US"];
-					}
-				}
-			}*/
+//			private function addLaguage():void
+//			{
+//				var popup:NewLanguage = NewLanguage(PopUpManager.createPopUp(this, NewLanguage, true));
+//				popup.addEventListener(CloseEvent.CLOSE, closeHandler);
+//				
+//				function closeHandler(event:CloseEvent):void
+//				{
+//					var lan:String = event.target.languageName;
+//					
+//					if(lan == "")return;
+//					
+//					var cols:Array = languages.columns;
+//					var dataGridColumn: DataGridColumn = new DataGridColumn(lan);
+//	
+//					cols.push(dataGridColumn);
+//					languages.columns = cols;
+//					
+//					for (var i:String in arLanguages)
+//					{
+//						var word:Object = arLanguages[i];
+//						word[lan] = word["en_US"];
+//					}
+//				}
+//			}
 		]]>
 	</fx:Script>
 	<s:VGroup width="100%" height="100%">
