--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
@@ -3,8 +3,10 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
 		 xmlns:OEComponents="OEComponents.*"
-		 show="group1_showHandler(event)" xmlns:ns="net.vdombox.object_editor.model.*"
-		 label="Information">
+		 show="group1_showHandler(event)"
+		 xmlns:ns="net.vdombox.object_editor.model.*"
+		 label="Information" 
+		 xmlns:ns1="net.vdombox.object_editor.view.essence.*">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 		<s:RadioButtonGroup id="group1"/>
@@ -136,6 +138,8 @@
 				<s:Button id="fchangeDisplayName" label="..." width="30" />
 			</s:HGroup>
 		</mx:FormItem>
+			
+		<ns1:SelectFormItem id="ffDisplayName" label="DisplayName"/>
 		
 		
 		<mx:FormItem label="Description" toolTip="писание объекта и его использования" enabled="false">
